--- a/landingpage.html
+++ b/landingpage.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="./images/logo.png">
-  <title>EZ</title>
+  <title>DOGSSR</title>
   <!-- 动态设置网站标题 -->
   <script>
     document.write('<script src="config.js?t=' + Math.random() + '"><\/script>');
@@ -850,7 +850,7 @@
   <header>
     <div class="logo">
       <img src="./images/logo.png" alt="Logo">
-      <h1 id="siteName">EZ</h1>
+      <h1 id="siteName">狗云加速器</h1>
     </div>
     <nav class="nav-links">
       <a href="#features">特性</a>
